[package]
name = "dash-plat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
borsh = "0.10"
ed25519-dalek = "1"
hotstuff_rs = "0.2.2"
rand = "0.7"
serde = { version = "1.0.192", features = ["serde_derive"] }
serde_yaml = "0.9.27"
