[package]
name = "dash-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
borsh = "0.10"
log = "0.4.20"
simple_logger = "4.2.0"
dash-common = { path = "../dash-common" }
serde = { version = "1.0.192", features = ["serde_derive"] }
serde_yaml = "0.9.27"
