[package]
name = "dash-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
borsh = "0.10"
ed25519 = { version = "1.5.3", features = ["pkcs8", "alloc", "pem"] }
ed25519-dalek = "1"
pkcs8 = { version = "0.9", features = ["pem"] }
hotstuff_rs = "0.2.2"
rand = "0.7"
