[package]
name = "dash-node"
version = "0.2.0"
authors = ["Shapooo <shabojia@outlook.com>"]
description = "Validator node for dash."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dash-common = { path = "../dash-common" }
dash-network = { path = "../dash-network" }
anyhow = "1.0.75"
borsh = "0.10"
bytes = "1.5.0"
clap = { version = "4.4.8", features = ["cargo"] }
hotstuff_rs = "0.2.2"
log = "0.4.20"
serde = { version = "1.0.192", features = ["serde_derive"] }
serde_yaml = "0.9.27"
simple_logger = "4.2.0"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "net", "sync", "io-util", "time", "macros"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = "0.3.29"
im = "15.1.0"
