[package]
name = "dash-tools"
version = "0.2.0"
authors = ["Shapooo <shabojia@outlook.com>"]
description = "Useful tools for dash"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dash-node = { path = "../dash-node" }
dash-client = { path = "../dash-client" }
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
serde_yaml = "0.9.27"
